# rust_autopatcher

./: Cargo.toml  README.md
src/: backup.rs  delta.rs  downloader.rs  extractor.rs  main.rs
src-tauri/: tauri.conf.json
src-tauri/my-app/: package-lock.json
src-tauri/my-app/src/: App.css  App.js
src-tauri/src/: App.js  main.rs
