[package]
name = "rust_autopatcher"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
blake3 = "1.3"
sha2 = "0.9"
tauri = { version = "1", features = ["api-all"] }

#We will use the bsdiff library to create and apply binary patches. First, let's add the bsdiff crate to our Cargo.toml
bsdiff = "0.4"

#Handle file extraction
zip = "0.5"